# ActivityTracker

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  about.txt  aliases.sh  docker-compose.yml  requests.http  thunder-collection_endpoints.json
.github/workflows/: rust.yml
migrations/2022-08-01-115856_mk_activity/: up.sql
src/: config.rs  db.rs  index.rs  main.rs  models.rs  schema.rs  utils.rs
src/api_views/: api_views_config.rs  app_config.rs  mod.rs  views.rs
src/client_views/: app_config.rs  client_views_config.rs  index.rs  mod.rs
src/storage/: db_io.rs  mod.rs
src/structs/: activity.rs  activitymanager.rs  mod.rs  task.rs  taskmanager.rs
src/views/: api.rs
static/: app.js  index.html  index.js  style.css
