[package]
name = "timetracker"
version = "2022.10.18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.15"
chrono = "0.4.22"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
actix-web = "4.2.1"
actix-files = "0.6.2"

