[package]
name = "activitytracker"
version = "2022.10.31"
edition = "2021"

[dependencies]
clap = "4.0.26"
chrono = "0.4.23"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
actix-web = { version = "4.2.1", features = ["openssl"] }
actix-files = "0.6.2"
log = "0.4.17"
env_logger = "0.9.3"
openssl = "0.10.42"

